gitops/clusters/de/hetzner/cluster/apps/oauth2-proxy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://$(AUTH0_DOMAIN)/
            - --redirect-url=https://oauth.tailb40090.ts.net/oauth2/callback
            - --http-address=0.0.0.0:4180
            - --email-domain=*
            - --cookie-domain=.tailb40090.ts.net
            - --whitelist-domain=.tailb40090.ts.net
            - --cookie-secure=true
            - --reverse-proxy=true
            - --set-xauthrequest=true
            - --pass-authorization-header=true
            - --skip-provider-button=true
          ports:
            - name: http
              containerPort: 4180
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
