gitops/clusters/de/hetzner/cluster/apps/oauth2-proxy/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - "oauth.tailb40090.ts.net"
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 4180
